# intelligent-testing

./: .gitignore  Makefile  README.md  checkpoints.dvc  config.py  data_process.md  docker-compose.yml  gen_doc.py  main.py  pyproject.toml  skills-lock.json
.dvc/: config
Dictionary/: I_syntactic_complexity.txt  Q_vecto.txt
ExtractFeature/: latent_feature.ipynb
app/: main.py
app/core/: lit_neural_cat.py  lit_neural_cat_optimized.py  neural_cat.py  neural_cat_optimized.py
app/datasets/: __init__.py  cpp_dataset.py  student_dataset.py
app/infrastructure/: di.py
app/models/: __init__.py  base.py  building_blocks.py  neural_cat_attn.py  neural_cat_base.py  neural_cat_film.py  neural_cat_optimized.py
app/training/: __init__.py  lit_model.py
artifacts/: evaluation_report.md
dataset/: Question.csv  Skill.csv
docs/: REORGANIZATION_NOTES.md  cat.md  model.md  thong_ke_kc_routes.txt  unique_skills.txt
lightning_logs/version_0/: hparams.yaml
lightning_logs/version_15/: hparams.yaml
lightning_logs/version_16/: hparams.yaml
lightning_logs/version_21/: hparams.yaml
lightning_logs/version_24/: hparams.yaml
lightning_logs/version_26/: hparams.yaml
lightning_logs/version_28/: hparams.yaml
lightning_logs/version_29/: hparams.yaml
lightning_logs/version_33/: hparams.yaml
lightning_logs/version_41/: hparams.yaml
lightning_logs/version_49/: hparams.yaml
lightning_logs/version_53/: hparams.yaml
lightning_logs/version_54/: hparams.yaml
lightning_logs/version_55/: hparams.yaml
lightning_logs/version_61/: hparams.yaml
lightning_logs/version_64/: hparams.yaml
lightning_logs/version_66/: hparams.yaml
lightning_logs/version_7/: hparams.yaml
lightning_logs/version_8/: hparams.yaml
migrations/: env.py
migrations/versions/: 0afbf46445e8_add_research_dataset_tables.py  2bcfa2e5a0a2_init_table.py  3d2c1b0a9f8e_align_student_sessions_schema.py  9a7b6c5d4e3f_add_student_sessions_table.py  (+6 more)
output_embeddings/: graph_code_embeddings_qid.npy
scratch/: check_candidate_mastery.py  check_db_schema.py  compute_concept_scores.py  debug_concept_scores.py  debug_model_forward.py  find_optimal_threshold.py  simulate_online_cat.py  test_attn_model.py  visualize_all_students_trajectories.py  visualize_concept_trajectory.py  visualize_results.py
scripts/: check_db_counts.py  compare_models.py  detailed_evaluation.py  evaluate_cpp_model.py  evaluate_neural_cat.py  extract_qwen_db_embeddings.py  extract_qwen_embeddings.py  import_final_sessions.py  load_cpp_dataset.py  load_dataset.py  load_features.py  load_kc_level_records.py  plot_loss.py  preview_import.py  reinit_refiner_ckpt.py  seed_exam_data.py  train_cpp_lightning.py  train_neural_cat.py
tests/: test_train_cpp.py
(+76 files in other folders)
