[project]
name = "intelligent-testing"
version = "0.1.0"
description = "Data and notebook workflow for intelligent testing research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "dishka>=1.10.1",
    "fastapi>=0.136.1",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
    "accelerate>=1.13.0",
    "lightning>=2.6.1",
    "pandas>=3.0.3",
    "sentence-transformers>=5.5.1",
    "torch>=2.4.0",
    "transformers>=5.8.1",
    "matplotlib>=3.10.9",
    "psycopg2>=2.9.12",
    "streamlit>=1.57.0",
    "plotly>=6.7.0",
    "torchvision>=0.20.1",
    "dvc>=3.67.1",
    "dagshub>=0.7.0",
    "dvc-s3>=3.3.0",
    "tensorboard>=2.15.0",
]

[project.scripts]
intelligent-testing = "intelligent_testing.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.29",
]

[tool.ruff]
exclude = ["notebooks"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }


